<resources>
    <string name="app_name">Wil Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact">Add Contact</string>
    <string name="call">Call</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="john_doe">John Doe</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="details_image">Details Image</string>
    <string name="upload">Local Contacts</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="phone_number_ngn">Phone Number (NGN)</string>
    <string name="sex">Sex:</string>
    <string name="phone_number">Number:</string>
    <string name="email_">Email:</string>
    <string name="name">Name:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="update_contact">Update Contact</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="phoneNumber">08100000000</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="error_requireld_field">This Field is Required</string>
    <string name="local_contacts">Local Contacts</string>
    <string name="profile_image">Profile Image</string>
    <string name="sync_local_contacts">Sync Local Contacts</string>
    <string name="delete_all">Delete All</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">RESET</string>
    <string name="confirm_password">Confirm Password</string>
</resources>