<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profileToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:paddingHorizontal="@dimen/default_margin_small"
            app:titleTextColor="@color/white"
            app:menu="@menu/profile_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvUpdateMessageToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:maxEms="14"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.ProfileFragment">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerInside"
                android:src="@drawable/profile_image"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:hint="@string/first_and_last_name"
                app:errorEnabled="true"
                app:helperText="Optional"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_bar_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_pin"
                    android:drawablePadding="@dimen/default_margin_small"
                    android:inputType="text"
                    android:padding="@dimen/default_margin_small" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:helperText="Required"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/default_margin_small"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/default_margin_small" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/phoneNumberLayout"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="@dimen/default_margin"-->
<!--                android:hint="@string/phone_number_ngn"-->
<!--                app:errorEnabled="true"-->
<!--                app:helperText="Optional"-->
<!--                app:helperTextEnabled="true"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/phoneNumberProfile"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:drawableStart="@drawable/ic_phone_android"-->
<!--                    android:drawablePadding="@dimen/default_margin_small"-->
<!--                    android:inputType="phone"-->
<!--                    android:padding="@dimen/default_margin_small" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->


            <TextView
                android:id="@+id/tvSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/save"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>