<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/default_margin_small"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:menu="@menu/details_menu">

            <TextView
                android:id="@+id/tvDetailsToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/john_doe"
                android:textSize="18sp"
                android:maxEms="14"
                android:singleLine="true"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textColor="@color/white"
                />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DetailFragment">


            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                android:background="@color/background_color"
                android:contentDescription="@string/details_image"
                android:scaleType="centerInside"
                android:src="@drawable/ic_address_card"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="@id/guideline7"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDetailNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_large"
                android:elevation="@dimen/default_margin"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/default_margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_bar_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/default_margin"
                    android:paddingVertical="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/ivDetailsCall"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/default_margin"
                        android:contentDescription="@string/call"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_call_24" />

                    <TextView
                        android:id="@+id/tvDetailNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin"
                        android:fontFamily="@font/montserrat_alternates_bold"
                        android:hint="@string/phoneNumber"
                        android:maxEms="14"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivDetailsMessage"
                        app:layout_constraintStart_toEndOf="@+id/ivDetailsCall"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ivDetailsMessage"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:contentDescription="@string/call"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_message_24" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDetailEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin_small"
                android:layout_marginTop="@dimen/default_margin_large"
                android:elevation="@dimen/default_margin"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/default_margin_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvDetailNumber">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/default_margin"
                    android:paddingVertical="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/ivDetailsEmail"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/default_margin"
                        android:contentDescription="@string/call"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/tvDetailEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin"
                        android:fontFamily="@font/montserrat_alternates_bold"
                        android:hint="@string/johndoe_gmail_com"
                        android:maxEms="14"
                        android:singleLine="true"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivDetailsEmail"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>